Added speedup values.

--- a/documents/documentation.tex
+++ b/documents/documentation.tex
@@ -413,10 +413,10 @@ About the \textbf{dimension} of the Stencil computation algorithm, it shows that
  \hline\hline
  Starting algorithm & 5.0533 & 1.00 & 1 \\
  + Loop interchange & 5.0533 & 1.00 & 1 \\
- + Optimization flags & 0.5904 & X & X \\
- + Parallel loops & 0.4585 & X & X \\
- + Loop tiling & 0.4422 & X & X \\
- Dimension Augmentation & 0.2645 & X & X \\ [1ex] 
+ + Optimization flags & 0.5904 & 8.55 & 8.55 \\
+ + Parallel loops & 0.4585 & 1.28 & 11.02 \\
+ + Loop tiling & 0.4422 & 1.03 & 11.42 \\
+ Dimension Augmentation & 0.2645 & 1.67 & 19.10 \\ [1ex] 
 \hline
 \end{tabular}
 \caption{Summary}
